--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-validar-requisitos/expansion-validar-requisitos.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-validar-requisitos/expansion-validar-requisitos.component.scss
@@ -5,3 +5,8 @@
 .size-label {
     font-size: 1.4em;
 }
+
+.colorMainColor.secondaryColor {
+    color: #d21e18;
+    color: var(--secondaryColor);
+}
