--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.scss
@@ -50,5 +50,10 @@
 
 .title-objeto {
   font-size: 20px;
+  color: #174193;
   color: var(--mainColor);
+  &.secondaryColor {
+      color: #d21e18;
+      color: var(--secondaryColor);
+  }
 }
