--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-inter-validar-requisitos/expansion-inter-validar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-inter-validar-requisitos/expansion-inter-validar-requisitos.component.html
@@ -123,7 +123,11 @@
           </div>
           <div class="d-flex align-items-center" *ngIf="perfil['tieneObservaciones'] === true">
             <div class="text-area-quill" [class.color-secondaryColor]="perfil['verificarObservacion'] === null">
-              <label for="alcanceParticular" class="text-area-quill--label size-label" [class.colorMainColor]="perfil['verificarObservacion'] !== null">
+              <label
+                for="alcanceParticular"
+                class="text-area-quill--label size-label"
+                [class.colorMainColor]="perfil['verificarObservacion'] !== null"
+              >
                 Observaciones a las hojas de vida del contratista de interventoria
               </label>
               <quill-editor
@@ -138,11 +142,9 @@
               </quill-editor>
             </div>
             <span class="contador miles" *ngIf="perfil['verificarObservacion'] !== null">
-              {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
+              {{ 1000 - textoLimpio(observaciones.quillEditor, 1000) }}
             </span>
-            <span class="contador miles" *ngIf="perfil['verificarObservacion'] === null">
-                1000
-            </span>
+            <span class="contador miles" *ngIf="perfil['verificarObservacion'] === null"> 1000 </span>
             <span class="icon-incompleto">
               <img
                 class="icon-incompleto--img"
