--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
@@ -38,7 +38,7 @@
         </div>
         <div class="col">
           <div
-            class="label-left colorMainColor font-weight-lighter"
+            class="label-left colorMainColor font-weight-lighter text-justify"
             [innerHTML]="textoLimpioString(justificacion)"
           ></div>
         </div>
