--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -38,32 +38,54 @@
     <ng-container matColumnDef="estado">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del proyecto</th>
       <td mat-cell *matCellDef="let element">
-        <mat-form-field class="select-width">
-          <!-- obra -->
-          <mat-select
-            required
-            [(ngModel)]="element.proyecto.estadoProyectoObraCodigo"
-            [class.invalid]="estaEditando"
-            (selectionChange)="onChangeEstado()"
+        <div class="d-flex">
+          <mat-form-field
+            class="select-width"
+            [class.mat-form-field-invalid]="!element.proyecto.estadoProyectoObraCodigo && estaEditando"
             *ngIf="contratacion.tipoSolicitudCodigo === '1'"
           >
-            <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
-              {{ estado.nombre }}
-            </mat-option>
-          </mat-select>
-          <!-- interventoria -->
-          <mat-select
-            required
-            [(ngModel)]="element.proyecto.estadoProyectoInterventoriaCodigo"
-            [class.invalid]="estaEditando"
-            (selectionChange)="onChangeEstado()"
+            <!-- obra -->
+            <mat-select
+              required
+              [(ngModel)]="element.proyecto.estadoProyectoObraCodigo"
+              (selectionChange)="onChangeEstado()"
+            >
+              <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
+                {{ estado.nombre }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field
+            class="select-width"
+            [class.mat-form-field-invalid]="!element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando"
             *ngIf="contratacion.tipoSolicitudCodigo === '2'"
           >
-            <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
-              {{ estado.nombre }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+            <!-- interventoria -->
+            <mat-select
+              required
+              [(ngModel)]="element.proyecto.estadoProyectoInterventoriaCodigo"
+              (selectionChange)="onChangeEstado()"
+            >
+              <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
+                {{ estado.nombre }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <span class="icon-incompleto">
+            <img
+              class="icon-incompleto--img"
+              src="assets/img/icon/incompleto.svg"
+              alt="este campo es requerido"
+              [matTooltipPosition]="'above'"
+              matTooltip="Debe ingresar la información en el campo para continuar"
+              matTooltipClass="info-tooltip"
+              *ngIf="
+                (!element.proyecto.estadoProyectoObraCodigo && estaEditando) ||
+                (element.proyecto.estadoProyectoInterventoriaCodigo && estaEditando)
+              "
+            />
+          </span>
+        </div>
       </td>
     </ng-container>
 
