--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-cronograma/tabla-cronograma.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-cronograma/tabla-cronograma.component.html
@@ -46,20 +46,23 @@
                   />
                 </span>
               </div>
-              <quill-editor
-                class="quill-editor-style"
-                [styles]="editorStyle"
-                [modules]="config"
-                (onContentChanged)="maxLength($event, 500)"
-                formControlName="descripcion"
-                [readOnly]="!editMode.valor"
-                [class.invalid]="
-                  (addressForm.controls[i].get('descripcion').invalid &&
-                    addressForm.controls[i].get('descripcion').touched) ||
-                  (addressForm.controls[i].get('descripcion').invalid && editMode.valor)
-                "
-              >
-              </quill-editor>
+              <div class="w-500">
+                <quill-editor
+                  class="quill-editor-style quill-dentro-de-la-tabla"
+                  [styles]="editorStyle"
+                  [modules]="config"
+                  (onContentChanged)="maxLength($event, 500)"
+                  formControlName="descripcion"
+                  required
+                  [readOnly]="!editMode.valor"
+                  [class.invalid]="
+                    (addressForm.controls[i].get('descripcion').invalid &&
+                      addressForm.controls[i].get('descripcion').touched) ||
+                    (addressForm.controls[i].get('descripcion').invalid && editMode.valor)
+                  "
+                >
+                </quill-editor>
+              </div>
             </td>
             <td class="mat-cell cdk-cell ng-star-inserted position-relative">
               <div class="d-flex justify-content-center btn-calendario-container toptd">
@@ -200,7 +203,7 @@
 
       <ng-container matColumnDef="fechaSolicitud">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de solicitud</th>
-        <td mat-cell *matCellDef="let element">{{ element.fechaSolicitud | date: 'dd/MM/yyyy' }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.fechaSolicitud }}</td>
       </ng-container>
 
       <ng-container matColumnDef="numeroSolicitud">
