--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/consideraciones-especiales/consideraciones-especiales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/consideraciones-especiales/consideraciones-especiales.component.html
@@ -34,8 +34,25 @@
   </div>
 
   <div class="d-flex align-items-center animatedDown" *ngIf="addressForm.controls.reasignacion.value === true">
-    <div  class="text-area-quill" [class.color-secondaryColor]="addressForm.get('descripcion').invalid && addressForm.get('descripcion').touched || addressForm.get('descripcion').invalid">
-      <label for="alcanceParticular" class="text-area-quill--label align-left-label" [class.colorMainColor]="!(addressForm.get('descripcion').invalid && addressForm.get('descripcion').touched || addressForm.get('descripcion').invalid)">Descripción</label>
+    <div
+      class="text-area-quill"
+      [class.color-secondaryColor]="
+        (addressForm.get('descripcion').invalid && addressForm.get('descripcion').touched) ||
+        (addressForm.get('descripcion').invalid && estaEditando)
+      "
+    >
+      <label
+        for="alcanceParticular"
+        class="text-area-quill--label align-left-label"
+        [class.colorMainColor]="
+          !(
+            (addressForm.get('descripcion').invalid && addressForm.get('descripcion').touched) ||
+            (addressForm.get('descripcion').invalid && estaEditando)
+          )
+        "
+      >
+        Descripción
+      </label>
       <quill-editor
         class="quill-editor-style"
         [modules]="config"
