--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/tabla-crear-solicitud-especial/tabla-crear-solicitud-especial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/tabla-crear-solicitud-especial/tabla-crear-solicitud-especial.component.html
@@ -12,7 +12,7 @@
 
         <ng-container matColumnDef="fechaSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
-            <td mat-cell *matCellDef="let element"> <b>{{element.fechaSolicitud | date: 'dd/MM/yyyy'}}</b> </td>
+            <td mat-cell *matCellDef="let element"> <b>{{element.fechaSolicitud}}</b> </td>
         </ng-container>
 
         <ng-container matColumnDef="numeroSolicitud">
