--- a/asivamosffie.web/asivamosffie/src/app/shared/components/header/header.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/shared/components/header/header.component.html
@@ -1,9 +1,18 @@
 <header class="header">
-    <img src="assets/img/logo/FFIE.svg" alt="Fondo de Financiamiento de la Infraestructura Educativa" class="header--logo">
-    <img src="assets/img/logo/asi-vamos-ffie.svg" alt="asi vamos ffie" class="header--logo" *ngIf="actualUser">
-    <img src="assets/img/logo/minEdu.png" alt="Min educación" class="header--logo">
-    <aside class="header--aside" *ngIf="actualUser">
-        <p class="header--aside--usuario">{{ actualUser.primerNombre }} {{ actualUser.segundoNombre !== undefined ? actualUser.segundoNombre : '' }} {{ actualUser.primerApellido }} {{ actualUser.segundoApellido }} </p>
-        <p class="header--aside--rol">{{ actualUser.rol !== undefined ? actualUser.rol[0].perfil.nombre : '' }}</p>
-    </aside>
+  <img
+    src="assets/img/logo/FFIE.svg"
+    alt="Fondo de Financiamiento de la Infraestructura Educativa"
+    class="header--logo"
+  />
+  <img src="assets/img/logo/asi-vamos-ffie.svg" alt="asi vamos ffie" class="header--logo" *ngIf="actualUser" />
+  <img src="assets/img/logo/minEdu.png" alt="Min educación" class="header--logo" />
+  <aside class="header--aside" *ngIf="actualUser">
+    <p class="header--aside--usuario">
+      {{ actualUser.primerNombre }} {{ actualUser.segundoNombre ? actualUser.segundoNombre : '' }}
+      {{ actualUser.primerApellido }} {{ actualUser.segundoApellido ? actualUser.segundoApellido : '' }}
+    </p>
+    <p class="header--aside--rol">
+      {{ actualUser.rol ? actualUser.rol[0].perfil.nombre : '' }}
+    </p>
+  </aside>
 </header>
